<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="ru.mikhalev.vladimir.gotfamilies.ui.activities.CharacterActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/color_primary"
            app:expandedTitleGravity="center|bottom"
            app:expandedTitleMarginBottom="@dimen/spacing_larger_72"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <FrameLayout
                android:id="@+id/profile_photo_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true">

                <ImageView
                    android:id="@+id/house_img"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"/>

            </FrameLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme.PopupOverlay"/>

        </android.support.design.widget.CollapsingToolbarLayout>


    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey_light"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/spacing_medium_24"
            android:layout_marginRight="@dimen/spacing_medium_24"
            android:layout_marginTop="@dimen/spacing_small_8"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/words_layout"
                style="@style/profile"
                android:orientation="horizontal">

                <ImageView
                    style="@style/profile_icon"
                    android:src="@drawable/profile_icon"/>

                <TextView
                    android:text="@string/title_words"
                    style="@style/profile_element_title"/>

                <TextView
                    android:id="@+id/words_txt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.75"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="@dimen/font_normal_16"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/born_layout"
                style="@style/profile"
                android:orientation="horizontal">

                <ImageView
                    style="@style/profile_icon"
                    android:src="@drawable/profile_icon"/>

                <TextView
                    android:text="@string/title_born"
                    style="@style/profile_element_title"/>

                <TextView
                    android:id="@+id/born_txt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.75"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="@dimen/font_normal_16"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/died_layout"
                style="@style/profile"
                android:orientation="horizontal">

                <ImageView
                    style="@style/profile_icon"
                    android:src="@drawable/profile_icon"/>

                <TextView
                    android:text="@string/title_died"
                    style="@style/profile_element_title"/>

                <TextView
                    android:id="@+id/died_txt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.75"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="@dimen/font_normal_16"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/titles_layout"
                style="@style/profile"
                android:orientation="horizontal">

                <ImageView
                    style="@style/profile_icon"
                    android:src="@drawable/profile_icon"/>

                <TextView
                    android:text="@string/title_titles"
                    style="@style/profile_element_title"/>

                <TextView
                    android:id="@+id/titles_txt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.75"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="@dimen/font_normal_16"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/aliases_layout"
                style="@style/profile"
                android:orientation="horizontal">

                <ImageView
                    style="@style/profile_icon"
                    android:layout_gravity="top"
                    android:src="@drawable/profile_icon"/>

                <TextView
                    android:text="@string/title_aliases"
                    style="@style/profile_element_title"/>

                <TextView
                    android:id="@+id/aliases_txt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.75"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="@dimen/font_normal_16"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/father_layout"
                style="@style/profile"
                android:orientation="horizontal">

                <ImageView
                    style="@style/profile_icon"/>

                <TextView
                    android:text="@string/title_father"
                    style="@style/profile_element_title"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.75">

                    <Button
                        android:id="@+id/father_btn"
                        style="@style/AppTheme.Button.Accent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-condensed"
                        android:textSize="@dimen/font_normal_16"/>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/mother_layout"
                style="@style/profile"
                android:orientation="horizontal">

                <ImageView
                    style="@style/profile_icon"/>

                <TextView
                    android:text="@string/title_mother"
                    style="@style/profile_element_title"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.75">

                    <Button
                        android:id="@+id/mother_btn"
                        style="@style/AppTheme.Button.Accent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-condensed"
                        android:textSize="@dimen/font_normal_16"/>
                </LinearLayout>


            </LinearLayout>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
